# nextgifto_telegram_userbot

./: README.md  pubspec.yaml
native_lib/: CMakeLists.txt  readme.md
nextgifto_telegram_userbot_documentation/: README.md  pubspec.yaml
nextgifto_telegram_userbot_documentation/android/app/: build.gradle
nextgifto_telegram_userbot_documentation/ios/Runner/: Info.plist
nextgifto_telegram_userbot_documentation/lib/: documentation_main.dart
nextgifto_telegram_userbot_documentation/linux/: CMakeLists.txt  my_application.cc
nextgifto_telegram_userbot_documentation/macos/Runner.xcodeproj/: project.pbxproj
nextgifto_telegram_userbot_documentation/test/: widget_test.dart
nextgifto_telegram_userbot_documentation/web/: index.html  manifest.json
nextgifto_telegram_userbot_documentation/windows/: CMakeLists.txt
nextgifto_telegram_userbot_documentation/windows/runner/: Runner.rc  main.cpp
package/nextgifto_telegram_userbot/: pubspec.yaml  pubspec_overrides.yaml
package/nextgifto_telegram_userbot/lib/schemes/: schemes.dart
package/nextgifto_telegram_userbot_android/: pubspec.yaml
package/nextgifto_telegram_userbot_android/lib/: nextgifto_telegram_userbot_android.dart
package/nextgifto_telegram_userbot_android/test/: nextgifto_telegram_userbot_android_test.dart
package/nextgifto_telegram_userbot_apis/: pubspec.yaml
package/nextgifto_telegram_userbot_assets_flutter/: pubspec.yaml
package/nextgifto_telegram_userbot_cli/: pubspec.yaml
package/nextgifto_telegram_userbot_client/: pubspec.yaml
package/nextgifto_telegram_userbot_dart/: pubspec.yaml  pubspec_overrides.yaml
package/nextgifto_telegram_userbot_flutter/: README.md  pubspec.yaml
package/nextgifto_telegram_userbot_fucshia/: pubspec.yaml
package/nextgifto_telegram_userbot_ios/: pubspec.yaml
package/nextgifto_telegram_userbot_isar_scheme/: pubspec.yaml
package/nextgifto_telegram_userbot_linux/: pubspec.yaml
package/nextgifto_telegram_userbot_macos/: pubspec.yaml
package/nextgifto_telegram_userbot_scheme/: pubspec.yaml
package/nextgifto_telegram_userbot_server/: pubspec.yaml
package/nextgifto_telegram_userbot_web/: pubspec.yaml
package/nextgifto_telegram_userbot_windows/: pubspec.yaml
test/: nextgifto_telegram_userbot_test.dart
(+58 files in other folders)
